--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,7 @@ dependencies:
   async: ^2.0.8
   flutter_image: ^1.0.0
   cached_network_image: ^0.5.1
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
