--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ ios/Flutter/Generated.xcconfig
 /flutter_map_example/pubspec.lock
 /flutter_map_example/.flutter-plugins
 /flutter_map_example/.vscode/
+/example/ios/.symlinks
