Wrap NMAMapView iOS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  latlong: ^0.6.1
+  protobuf: ^0.13.11
+  location: ^2.3.5
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
