--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This is needed to determine your current location</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This is needed for the LiveSight augmented reality feature</string>
+    <key>NSBluetoothPeripheralUsageDescription</key>
+    <string>This is needed for the Bluetooth-based indoor positioning feature</string>
+    <key>NSMotionUsageDescription</key>
+    <string>This is needed for the indoor positioning feature</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This is needed to determine your current location</string>
+	<key>io.flutter.embedded_views_preview</key>
+	<string>YES</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
